--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,10 @@
 
   <span>BETTER TOGETHER</span>
 
-  <p id="mail">If you want mail: <a href="talonlefevre@gmail.com">talonlefevre@gmail.com</a></p>
-  <p id="influence">If you want to be influenced: <a href="https://www.instagram.com/techwithtalon/">@techwithtalon</a></p>
+  <div id="social-links">
+    <p id="mail">If you want mail: <a href="talonlefevre@gmail.com">talonlefevre@gmail.com</a></p>
+    <p id="influence">If you want to be influenced: <a href="https://www.instagram.com/techwithtalon/">@techwithtalon</a></p>
+  </div>
 
 
 
