--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   <span>BETTER TOGETHER</span>
 
   <div id="social-links">
-    <p id="mail">If you want mail: <a href="talonlefevre@gmail.com">talonlefevre@gmail.com</a></p>
+    <p id="mail">If you want to email: <a href="talonlefevre@gmail.com">talonlefevre@gmail.com</a></p>
     <p id="influence">If you want to be influenced: <a href="https://www.instagram.com/techwithtalon/">@techwithtalon</a></p>
   </div>
 
