project.html and project.css updated

--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>My projetcs</title>
   <link rel="stylesheet" type="text/css" href="projetcs.css">
-</head>
-<body>
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <script src="main.js"></script>
 
+</head>
+<header>
+  <span>Talon LeFevre</span>
+</header>
+<body>
+
+  <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="My Image"/></a>
+  <a href="https://www.instagram.com/techwithtalon/"><img src="insta.png" alt="Instagram" class="insta"/></a>
+  <a href="https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
+  <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
+
+  <nav>
+    <ul>
+      <li><a href="#" onclick="goToHome()">HOME</a></li>
+      <li><a href="#" onclick="goToContact()">CONTACT</a></li>
+    </ul>
+  </nav>
 
 
 
