PROJECT.HTML AND PROJECT.CSS UPDATED

--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <script src="main.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet">
+
 
 </head>
 <header>
@@ -30,7 +34,9 @@
     </ul>
   </nav>
 
+  
 
+  
 
 </body>
 </html>
