update to projects pages

--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,32 @@
     </ul>
   </nav>
 
-  
+  <span class="center">Projects</span>
 
+  <div class="box-container">
+    <div class="box">
+      <h1>Eye Watcher</h1>
+      <img src="eye.png" alt="eye watch">
+      <p>Eye Watcher is a program that has eyes follow your mouse around the screen.</p>
+      <a href="https://github.com/talonlefevre/EyeWatch" class="button">Repository</a>
+    </div>
+    
+    <div class="box">
+      <h1>Bus Tracker</h1>
+      <img src="bus.png" alt="bus">
+      <p>Bus Tracker, tracks the stops between MIT and Harvard.</p>
+      <a href="https://github.com/talonlefevre/BusTracker" class="button">Repository</a>
+    </div>
+
+    <div class="box">
+      <h1>PacMen</h1>
+      <img src="PacMan.png" alt="PacMen">
+      <p>Is a program that makes each pacman you add bounce off any wall it hits. </p>
+      <a href="https://github.com/talonlefevre/PacMen" class="button">Repository</a>
+    </div>
+  </div>
+  
+  
   
 
 </body>
