changes to home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arapey:ital@1&display=swap" rel="stylesheet">
+
   <script src="main.js"></script>
 </head>
 
@@ -22,7 +26,12 @@
     </ul>
   </nav>
 
- 
+  <div class="heading"><h1>hey you</h1></div>
+  <div class="heading2"><h1>I'm Talon LeFevre</h1></div>
+  <h2>Currently enrolled in an Online Coding Bootcamp <br> through MIT | xPRO. I'm attending Southern New Hampshire<br> University studying Computer Science. This will be my 
+    <br> second degree as I graduated from West Virginia <br> University with a BA in AgriBusiness Management.
+    <br> When I'm not studying, I'm a farm wife and a dog mom.</h2>
+
   <img src="port4.png" alt="portfolio picture">
 
 
