--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <div class="heading2"><h1>I'm Talon LeFevre</h1></div>
   <h2>Currently enrolled in an Online Coding Bootcamp <br> through MIT | xPRO. I'm attending Southern New Hampshire<br> University studying Computer Science. This will be my 
     <br> second degree as I graduated from West Virginia <br> University with a BA in AgriBusiness Management.
-    <br> When I'm not studying, I'm a farm wife and a dog mom.</h2>
+    <br> When I'm not studying, I'm a farm wife and a dog mom.
+    <br>Lets be social: </h2>
 
   <img src="port4.png" alt="portfolio picture">
 
