home page changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  
 
   <nav>
     <ul>
@@ -31,9 +32,18 @@
   <h2>Currently enrolled in an Online Coding Bootcamp <br> through MIT | xPRO. I'm attending Southern New Hampshire<br> University studying Computer Science. This will be my 
     <br> second degree as I graduated from West Virginia <br> University with a BA in AgriBusiness Management.
     <br> When I'm not studying, I'm a farm wife and a dog mom.
-    <br>Lets be social: </h2>
+    <br>Lets be social: 
+  </h2>
 
   <img src="port4.png" alt="portfolio picture">
+
+  <div>
+    <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="Image1" class="linkedin"/></a>
+    <a href="https://www.instagram.com/techwithtalon/"><img src="insta.png" alt="Instagram" class="instagram"/></a>
+    <a href="https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
+    <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
+  </div>
+  
 
 
   <footer>
