postion issues fixed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <br>Lets be social: 
   </h2>
 
-  <img src="port4.png" alt="portfolio picture">
+  <img src="port4.png" alt="portfolio picture" class="port4">
 
   <div>
     <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="Image1" class="linkedin"/></a>
