--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </ul>
   </nav>
 
+  <img src="square.png" alt="square" class="square">
+  
+  <img src="port4.png" alt="portfolio picture" class="port4">
+
   <div class="heading"><h1>hey you</h1></div>
   <div class="heading2"><h1>I'm Talon LeFevre</h1></div>
   <h2>Currently enrolled in an Online Coding Bootcamp <br> through MIT | xPRO. I'm attending Southern New Hampshire<br> University studying Computer Science. This will be my 
@@ -34,8 +38,9 @@
     <br> When I'm not studying, I'm a farm wife and a dog mom.
     <br>Lets be social: 
   </h2>
-
-  <img src="port4.png" alt="portfolio picture" class="port4">
+ 
+  
+ 
 
   <div>
     <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="Image1" class="linkedin"/></a>
@@ -44,7 +49,7 @@
     <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
   </div>
   
-
+  
 
   <footer>
     <img src="fogo.png" alt="image">
