--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="heading"><h1>hey you</h1></div>
   <div class="heading2"><h1>I'm Talon LeFevre</h1></div>
   <h2>Currently enrolled in an Online Coding Bootcamp <br> through MIT | xPRO. I'm attending Southern New Hampshire<br> University studying Computer Science. This will be my 
-    <br> second degree as I graduated from West Virginia <br> University with a BA in AgriBusiness Management.
+    <br> second degree as I graduated from West Virginia <br> University with a BS in AgriBusiness Management.
     <br> When I'm not studying, I'm a farm wife and a dog mom.
     <br>Lets be social: 
   </h2>
