--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,10 @@
     <p id="influence">If you want to be influenced: <a href="https://www.instagram.com/techwithtalon/">@techwithtalon</a></p>
   </div>
 
+  <footer>
+    <img src="fogo.png" alt="image">
+    <p>Copyright &copy; 2023 LeFevre Co. | Designed by Talon LeFevre</p>
+  </footer>
 
 
 </body>
