--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-  <div id="container">
-    <div id="main"> 
+  
 
   <nav>
     <ul>
@@ -28,9 +27,16 @@
     </ul>
   </nav>
 
-  
+  <img src="square.png" alt="portfolio picture" class="square">
+
+  <div class="video">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UMEP2wTWYOg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
+
   
   <img src="port4.png" alt="portfolio picture" class="port4">
+
+  
 
   <div class="heading"><h1>hey you</h1></div>
   <div class="heading2"><h1>I'm Talon LeFevre</h1></div>
@@ -40,8 +46,7 @@
     <br>Lets be social: 
   </h2>
  
-  
- 
+
 
   <div>
     <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="Image1" class="linkedin"/></a>
@@ -50,14 +55,9 @@
     <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
   </div>
   
-    </div>
-  </div>
-
+ 
   
 
-  <footer>
-    <p>Copyright &copy; 2023 LeFevre Co. | Designed by Talon LeFevre</p>
-  </footer>
   
 
 </body>
