--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-  
+  <div id="container">
+    <div id="main">
 
   <nav>
     <ul>
@@ -55,7 +56,13 @@
     <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
   </div>
   
- 
+    </div>
+  </div>
+
+  
+  <footer>
+    <p>Copyright &copy; 2023 LeFevre Co. | Designed by Talon LeFevre</p>
+  </footer>
   
 
   
