--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
 </header>
 <body>
 
-  <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="My Image"/></a>
-  <a href="https://www.instagram.com/techwithtalon/"><img src="insta.png" alt="Instagram" class="insta"/></a>
-  <a href="https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
-  <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
+  <a href="#" onclick="window.open('https://www.linkedin.com/in/talon-lefevre-384104b3/', '_My Image')"><img src="link.png" alt="My Image"/></a>
+  <a href="#" onclick="window.open('https://www.instagram.com/techwithtalon/', '_insta')"><img src="insta.png" alt="Instagram" class="insta"/></a>
+  <a href="#" onclick="window.open('https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA', '_youtube')"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
+  <a href="#" onclick="window.open('https://github.com/talonlefevre?tab=repositories', '_git')"><img src="github.png" alt="Github" class="git"/></a>
 
   <nav>
     <ul>
