--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <nav>
     <ul>
-      <li><a href="#" onclick="goToContact()">CONTACT</a></li>
+      <li><a href="#" onclick="window.open('https://talonlefevre.github.io/contact.html', '_contact')">CONTACT</a></li>
       <span>Talon LeFevre</span>
-      <li><a href="#" onclick="goToProjects()">PROJECTS</a></li>
+      <li><a href="#" onclick="window.open('https://talonlefevre.github.io/projects.html', '_projects')">PROJECTS</a></li>
     </ul>
   </nav>
 
@@ -50,10 +50,10 @@
 
 
   <div>
-    <a href="https://www.linkedin.com/in/talon-lefevre-384104b3/"><img src="link.png" alt="Image1" class="linkedin"/></a>
-    <a href="https://www.instagram.com/techwithtalon/"><img src="insta.png" alt="Instagram" class="instagram"/></a>
-    <a href="https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
-    <a href="https://github.com/talonlefevre?tab=repositories"><img src="github.png" alt="Github" class="git"/></a>
+    <a href="#" onclick="window.open('https://www.linkedin.com/in/talon-lefevre-384104b3/', '_linkedin')"><img src="link.png" alt="Image1" class="linkedin"/></a>
+    <a href="#" onclick="window.open('https://www.instagram.com/techwithtalon/', '_instagram')"><img src="insta.png" alt="Instagram" class="instagram"/></a>
+    <a href="#" onclick="window.open('https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA', '_youtube')"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
+    <a href="#" onclick="window.open('https://github.com/talonlefevre?tab=repositories', '_git')"><img src="github.png" alt="Github" class="git"/></a>
   </div>
   
     </div>
