--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
   <div id="social-links">
     <p id="mail">If you want to email: <a href="talonlefevre@gmail.com">talonlefevre@gmail.com</a></p>
-    <p id="influence">If you want to be influenced: <a href="https://www.instagram.com/techwithtalon/">@shoplefevremade</a></p>
+    <p id="influence">If you want to be influenced: <a href="https://www.instagram.com/lefevremade/">@lefevremade</a></p>
   </div>
 
   <footer>
