--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div>
     <a href="#" onclick="window.open('https://www.linkedin.com/in/talon-lefevre-384104b3/', '_linkedin')"><img src="link.png" alt="Image1" class="linkedin"/></a>
-    <a href="#" onclick="window.open('https://www.instagram.com/techwithtalon/', '_instagram')"><img src="insta.png" alt="Instagram" class="instagram"/></a>
+    <a href="#" onclick="window.open('https://www.instagram.com/talonlefevre/', '_instagram')"><img src="insta.png" alt="Instagram" class="instagram"/></a>
     <a href="#" onclick="window.open('https://www.youtube.com/channel/UCP7M1fzhrsXDmiQpnPFFPZA', '_youtube')"><img src="youtube.png" alt="Youtube" class="youtube"/></a>
     <a href="#" onclick="window.open('https://github.com/talonlefevre?tab=repositories', '_git')"><img src="github.png" alt="Github" class="git"/></a>
   </div>
